tests/error/misc/no-entry.rd
// test: Can not link program without entry
// run: $BINARY % -o=%.out --messages=minimal
// cleanup: rm %.out

pub fn foo() { }

